--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "~1.8.1",
     "config": "^1.24.0",
     "cookie-parser": "~1.3.3",
+    "crypto": "0.0.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "jade": "~1.6.0",
