--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-uuid": "^1.4.7",
     "pg": "^6.1.0",
     "q": "^1.4.1",
+    "request": "^2.81.0",
     "serve-favicon": "~2.1.3",
     "silly-datetime": "^0.1.2",
     "stylus": "0.42.3"
