--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "request": "^2.81.0",
     "serve-favicon": "~2.1.3",
     "silly-datetime": "^0.1.2",
-    "stylus": "0.42.3"
+    "stylus": "0.42.3",
+    "twilio": "^3.5.0"
   }
 }
