--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 ﻿{
   "accountSid": "ACb5e8b3e5b39976c4506a4e7be481bcdd",
   "authToken": "2f84fa93a51c920b639fe071e5eadd98",
-  "from": "+14152365395"
+  "from": "+14152365395",
+  "activeTime": "3"
 }
